<resources>
    <string name="app_name">MeditationWSProject</string>
    <string name="logo_content_description">this is a logo</string>
    <string name="leaves_content_view">these are leaves</string>
    <string name="greeting_text">ПРИВЕТ</string>
    <string name="wishes_text">Наслаждайся отборочными.\n Будь внимателен.\n Делай хорошо.</string>
    <string name="onboarding_button_text">Войти в аккаунт</string>
    <string name="registration_suggestion_text">Зарегистрируйтесь</string>
    <string name="registration_question_text">Ещё нет аккаунта? </string>
    <string name="sign_in_text">Sign in</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Пароль</string>
    <string name="login_profile_button">Профиль</string>
    <string name="login_register_text">Register</string>
    <!--  application text  -->
    <string name="loginErrorText">Неправильное имя пользователя или пароль</string>
    <string name="emailErrorText">Неверный email</string>
    <string name="plugText">Заглушка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>