<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash_onboarding_screens"
    tools:context=".ui.onboarding_activity.OnboardingActivity">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_content_description"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/logo_bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_logo_guideline"
        app:srcCompat="@drawable/logo_meditation" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logo_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_logo_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <TextView
        android:id="@+id/greeting_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_bold"
        android:gravity="center"
        android:text="@string/greeting_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/greeting_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image_view" />

    <TextView
        android:id="@+id/wishes_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_medium"
        android:gravity="center"
        android:text="@string/wishes_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/wishes_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text_view" />

    <Button
        android:id="@+id/entering_button"
        style="@style/onboarding_login_buttons_style"
        android:text="@string/onboarding_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishes_text_view"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onboarding_registration_margin"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/alegreya_regular"
        android:text="@string/registration_question_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/onboarding_registration_text_size"
        app:layout_constraintEnd_toStartOf="@+id/registration_text_view"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/entering_button"
        app:layout_constraintTop_toBottomOf="@+id/entering_button" />

    <TextView
        android:id="@+id/registration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onboarding_registration_margin"
        android:clickable="true"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/registration_suggestion_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/onboarding_registration_text_size"
        app:layout_constraintEnd_toEndOf="@+id/entering_button"
        app:layout_constraintStart_toEndOf="@+id/question_text_view"
        app:layout_constraintTop_toBottomOf="@+id/entering_button"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>